--- a/imagenes.html
+++ b/imagenes.html
@@ -1,81 +1,172 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Uso de imágenes</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Diseño Editorial — Uso de imágenes</title>
+  <meta name="description" content="Uso de imágenes en diseño editorial." />
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
-<style>
-/* MISMO CSS */
-</style>
+  <style>
+    :root{
+      --bg: #08060a;
+      --panel:#0f0d14;
+      --card:#14111a;
+      --muted:#cfc9de;
+      --accent:#9161ff;
+      --accent-2:#5a2bd1;
+      --white:#ffffff;
+      --border: rgba(255,255,255,0.04);
+      --header-img-url: url('headers/imagenes.jpg');
+    }
 
+    *{box-sizing:border-box}
+    html,body{height:100%; margin:0; font-family:Inter, system-ui; background:var(--bg); color:var(--white);}
+
+    .wrap{display:flex; min-height:100vh}
+
+    .sidebar{
+      width:260px; background:linear-gradient(180deg,var(--panel), #0b0810); border-right:1px solid var(--border);
+      padding:28px; position:fixed; top:0; left:0; bottom:0; overflow:auto;
+    }
+
+    .brand{display:flex; gap:12px; align-items:center; margin-bottom:18px}
+    .logo{width:52px;height:52px;border-radius:10px;background:linear-gradient(135deg,var(--accent),var(--accent-2));display:grid;place-items:center;font-weight:800;}
+    .brand h1{font-size:16px;margin:0}
+    .brand p{margin:0;font-size:12px;color:var(--muted)}
+
+    nav.primary{margin-top:6px}
+    nav.primary a{
+      display:flex;gap:10px;align-items:center;padding:10px 8px;border-radius:8px;
+      color:var(--muted);text-decoration:none;font-weight:600;margin-bottom:6px
+    }
+    nav.primary a svg{flex-shrink:0}
+    nav.primary a:hover{color:var(--white)}
+
+    .sidebar .actions{margin-top:auto;display:flex;flex-direction:column;gap:10px}
+    .btn{display:inline-flex;align-items:center;gap:10px;padding:10px 14px;border-radius:10px;text-decoration:none;font-weight:700}
+    .btn.mail{background:linear-gradient(90deg,var(--accent),var(--accent-2));color:var(--white)}
+    .btn.ghost{background:transparent;border:1px solid var(--border);color:var(--muted)}
+
+    .mobile-toggle{display:none;margin-left:auto}
+
+    main{margin-left:260px;flex:1}
+    .header{
+      height:320px; display:flex; align-items:flex-end; color:var(--white);
+      background-image: var(--header-img-url);
+      background-size:cover; background-position:center; position:relative; border-bottom:1px solid var(--border);
+    }
+    .header::after{content:'';position:absolute;inset:0;background:linear-gradient(180deg, rgba(9,6,12,0.25), rgba(10,6,15,0.75));}
+    .header .hero{position:relative; z-index:2;padding:36px 60px;display:flex;align-items:center;gap:24px}
+
+    .hero .title{font-size:28px;margin:0;color:var(--accent)}
+    .hero .subtitle{color:var(--muted);margin-top:6px}
+
+    .container{padding:36px 60px}
+
+    footer{padding:24px 60px;border-top:1px solid var(--border);color:var(--muted)}
+
+    @media (max-width:980px){
+      .sidebar{position:fixed;transform:translateX(-100%);transition:transform .28s;z-index:40}
+      .sidebar.open{transform:translateX(0)}
+      .mobile-toggle{display:inline-flex}
+      main{margin-left:0}
+    }
+  </style>
 </head>
+
 <body>
+  <div class="wrap">
 
-<div class="wrap">
+    <aside class="sidebar" id="sidebar" aria-label="Navegación lateral">
+      <div class="brand">
+        <div class="logo">DE</div>
+        <div>
+          <h1>Diseño Editorial</h1>
+          <p class="muted">Formato · Tipografía · Retícula</p>
+        </div>
+        <button class="mobile-toggle" id="openSidebar" aria-label="Abrir menú" title="Abrir menú" style="margin-left:auto;background:transparent;border:none;color:var(--muted);font-weight:700">☰</button>
+      </div>
 
-<aside class="sidebar">
-  
-  <div class="brand">
-    <div class="logo">DE</div>
-    <div>
-      <h1>Diseño Editorial</h1>
-      <p>Guía y recursos</p>
-    </div>
+      <nav class="primary" id="primaryNav">
+        <a href="formato.html" class="navlink">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><rect x="3" y="4" width="18" height="16" rx="2" stroke="currentColor" stroke-width="1.4"/></svg>
+          Formato
+        </a>
+
+        <a href="tipografia.html" class="navlink">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M4 20h16" stroke="currentColor" stroke-width="1.4"/><path d="M12 4l-4 12" stroke="currentColor" stroke-width="1.4"/><path d="M12 4l4 12" stroke="currentColor" stroke-width="1.4"/></svg>
+          Tipografía
+        </a>
+
+        <a href="reticula.html" class="navlink">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 9h18M3 15h18" stroke="currentColor" stroke-width="1.4"/></svg>
+          Retícula
+        </a>
+
+        <a href="color.html" class="navlink">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><circle cx="12" cy="12" r="7" stroke="currentColor" stroke-width="1.4"/></svg>
+          Color
+        </a>
+
+        <a href="cubierta.html" class="navlink">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><rect x="3" y="4" width="14" height="16" rx="1.2" stroke="currentColor" stroke-width="1.4"/><path d="M17 6h3v12h-3" stroke="currentColor" stroke-width="1.4"/></svg>
+          Cubierta / Portada
+        </a>
+
+        <a href="imagenes.html" class="navlink">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><rect x="3" y="4" width="18" height="14" rx="1.2" stroke="currentColor" stroke-width="1.4"/><path d="M8 11l2 2 3-3 4 4" stroke="currentColor" stroke-width="1.4"/></svg>
+          Uso de imágenes
+        </a>
+
+        <a href="proceso.html" class="navlink">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M12 2v6" stroke="currentColor" stroke-width="1.4"/><path d="M12 16v6" stroke="currentColor" stroke-width="1.4"/><path d="M4.9 7.5l4.24 4.24" stroke="currentColor" stroke-width="1.4"/><path d="M19.1 16.5l-4.24-4.24" stroke="currentColor" stroke-width="1.4"/></svg>
+          Proceso de maquetación
+        </a>
+      </nav>
+
+      <div class="actions">
+        <a class="btn mail" href="mailto:jose.davila@institutoalejandria.edu.mx">✉️ Enviar correo</a>
+        <a class="btn ghost" href="index.html" id="toTop">⤴ Volver al inicio</a>
+      </div>
+    </aside>
+
+    <main>
+      <header class="header" role="banner">
+        <div class="hero">
+          <div>
+            <h2 class="title">Uso de imágenes</h2>
+            <p class="subtitle muted">Resoluciones, permisos y tratamiento visual</p>
+          </div>
+        </div>
+      </header>
+
+      <section class="container">
+        <h2>Buenas prácticas para imágenes</h2>
+        <p class="muted">Aquí puedes documentar especificaciones de resolución, formatos, licences y ejemplos.</p>
+      </section>
+
+      <footer>
+        <div style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
+          <div class="small muted">© <span id="year"></span> Diseño Editorial · Hecho por José Luis Dávila</div>
+          <div class="small muted">Plantillas listas para GitHub Pages</div>
+        </div>
+      </footer>
+    </main>
+
   </div>
 
-  <nav class="primary">
+  <a class="backtop" href="index.html">↑</a>
 
-    <a href="formato.html"><svg width="20" height="20"><rect x="3" y="3" width="14" height="14"/></svg>Formato</a>
+  <script>
+    // Año dinámico
+    document.getElementById('year').textContent = new Date().getFullYear();
 
-    <a href="tipografia.html"><svg width="20" height="20"><path d="M4 17h12M6 3h8l-4 14"/></svg>Tipografía</a>
-
-    <a href="reticula.html"><svg width="20" height="20"><rect x="3" y="3" width="6" height="6"/><rect x="11" y="3" width="6" height="6"/><rect x="3" y="11" width="6" height="6"/><rect x="11" y="11" width="6" height="6"/></svg>Retícula</a>
-
-    <a href="color.html"><svg width="20" height="20"><circle cx="10" cy="10" r="7"/></svg>Color</a>
-
-    <a href="cubierta.html"><svg width="20" height="20"><path d="M4 3h12v14H4z"/></svg>Cubierta / Portada</a>
-
-    <a href="imagenes.html" style="color:white">
-      <svg width="20" height="20" fill="none" stroke="white" stroke-width="2">
-        <rect x="3" y="3" width="14" height="14"/>
-        <circle cx="9" cy="10" r="2"/>
-        <path d="M3 14l4-4 3 3 4-5 3 3"/>
-      </svg>
-      Uso de imágenes
-    </a>
-
-    <a href="proceso.html"><svg width="20" height="20"><path d="M12 2v6M12 16v6M4.9 7.5L9.1 11.7M19.1 16.5L14.9 12.3"/></svg>Proceso de maquetación</a>
-
-  </nav>
-
-  <div class="actions">
-    <a class="btn mail" href="mailto:jose.davila@institutoalejandria.edu.mx">✉️ Enviar correo</a>
-    <a class="btn ghost" href="index.html">⬅ Volver al inicio</a>
-  </div>
-
-</aside>
-
-<main>
-
-<section class="header">
-  <div class="hero">
-    <h2 class="title">Uso de imágenes</h2>
-    <p class="subtitle">Composición, resolución y estilo visual.</p>
-  </div>
-</section>
-
-<div class="container">
-  <h1>Uso de imágenes</h1>
-  <p>Contenido de la sección imágenes.</p>
-</div>
-
-<footer>Diseño Editorial © 2025</footer>
-
-</main>
-
-</div>
+    // Mobile toggle
+    const sidebar = document.getElementById('sidebar');
+    const openBtn = document.getElementById('openSidebar');
+    openBtn && openBtn.addEventListener('click', ()=> sidebar.classList.toggle('open'));
+  </script>
 </body>
 </html>
