--- a/reticula.html
+++ b/reticula.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Retícula</title>
+  <title>Diseño Editorial — Retícula</title>
+  <meta name="description" content="Principios y estructura de retículas para diseño editorial." />
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
@@ -17,7 +18,7 @@
       --accent-2:#5a2bd1;
       --white:#ffffff;
       --border: rgba(255,255,255,0.04);
-      --header-img-url: url('PLACEHOLDER-HEADER.jpg');
+      --header-img-url: url('imgs/header-reticula.jpg');
     }
 
     *{box-sizing:border-box}
@@ -41,12 +42,15 @@
       color:var(--muted);text-decoration:none;font-weight:600;margin-bottom:6px
     }
     nav.primary a svg{flex-shrink:0}
-    nav.primary a:hover{color:var(--white)}
+    nav.primary a:hover,
+    nav.primary a[aria-current="page"]{color:var(--white)}
 
-    .sidebar .actions{margin-top:auto;display:flex;flex-direction:column;gap:10px}
+    .sidebar .actions{margin-top:40px;display:flex;flex-direction:column;gap:10px}
     .btn{display:inline-flex;align-items:center;gap:10px;padding:10px 14px;border-radius:10px;text-decoration:none;font-weight:700}
     .btn.mail{background:linear-gradient(90deg,var(--accent),var(--accent-2));color:var(--white)}
     .btn.ghost{background:transparent;border:1px solid var(--border);color:var(--muted)}
+
+    .mobile-toggle{display:none;margin-left:auto}
 
     main{margin-left:260px;flex:1}
     .header{
@@ -60,110 +64,119 @@
     .hero .title{font-size:28px;margin:0;color:var(--accent)}
     .hero .subtitle{color:var(--muted);margin-top:6px}
 
-    .container{padding:36px 60px}
+    .container{padding:36px 60px;line-height:1.65}
+
+    .container h2{margin-top:32px;color:var(--accent)}
+    .container p{color:var(--muted)}
 
     footer{padding:24px 60px;border-top:1px solid var(--border);color:var(--muted)}
+
+    .backtop{position:fixed;right:22px;bottom:22px;background:linear-gradient(90deg,var(--accent),var(--accent-2));padding:12px;border-radius:999px;color:white;text-decoration:none;}
 
     @media (max-width:980px){
       .sidebar{position:fixed;transform:translateX(-100%);transition:transform .28s;z-index:40}
       .sidebar.open{transform:translateX(0)}
+      .mobile-toggle{display:inline-flex}
       main{margin-left:0}
     }
   </style>
 </head>
 
 <body>
+
 <div class="wrap">
 
+  <!-- SIDEBAR -->
   <aside class="sidebar">
-
     <div class="brand">
       <div class="logo">DE</div>
       <div>
         <h1>Diseño Editorial</h1>
-        <p>Guía y recursos</p>
+        <p class="muted">Formato · Tipografía · Retícula</p>
       </div>
     </div>
 
     <nav class="primary">
-
       <a href="formato.html">
-        <svg width="20" height="20" fill="none" stroke="currentColor" stroke-width="2">
-          <rect x="3" y="3" width="14" height="14" />
-        </svg>
+        <svg width="18" height="18" viewBox="0 0 24 24"><rect x="3" y="4" width="18" height="16" rx="2" stroke="currentColor"/></svg>
         Formato
       </a>
 
       <a href="tipografia.html">
-        <svg width="20" height="20" fill="none" stroke="currentColor" stroke-width="2">
-          <path d="M4 17h12M6 3h8l-4 14" />
-        </svg>
+        <svg width="18" height="18" viewBox="0 0 24 24"><path d="M4 20h16"/><path d="M12 4l-4 12"/><path d="M12 4l4 12"/></svg>
         Tipografía
       </a>
 
-      <a href="reticula.html" style="color:white">
-        <svg width="20" height="20" fill="none" stroke="white" stroke-width="2">
-          <rect x="3" y="3" width="6" height="6" />
-          <rect x="11" y="3" width="6" height="6" />
-          <rect x="3" y="11" width="6" height="6" />
-          <rect x="11" y="11" width="6" height="6" />
-        </svg>
+      <a href="reticula.html" aria-current="page">
+        <svg width="18" height="18" viewBox="0 0 24 24"><path d="M3 9h18M3 15h18"/></svg>
         Retícula
       </a>
 
       <a href="color.html">
-        <svg width="20" height="20" fill="none" stroke="currentColor" stroke-width="2">
-          <circle cx="10" cy="10" r="7" />
-        </svg>
+        <svg width="18" height="18" viewBox="0 0 24 24"><circle cx="12" cy="12" r="7" stroke="currentColor"/></svg>
         Color
       </a>
 
       <a href="cubierta.html">
-        <svg width="20" height="20" fill="none" stroke="currentColor" stroke-width="2">
-          <path d="M4 3h12v14H4z" />
-        </svg>
+        <svg width="18" height="18" viewBox="0 0 24 24"><rect x="3" y="4" width="14" height="16"/><path d="M17 6h3v12h-3"/></svg>
         Cubierta / Portada
       </a>
 
       <a href="imagenes.html">
-        <svg width="20" height="20" fill="none" stroke="currentColor" stroke-width="2">
-          <rect x="3" y="3" width="14" height="14" />
-          <circle cx="9" cy="10" r="2" />
-          <path d="M3 14l4-4 3 3 4-5 3 3" />
-        </svg>
+        <svg width="18" height="18" viewBox="0 0 24 24"><rect x="3" y="4" width="18" height="14"/><path d="M8 11l2 2 3-3 4 4"/></svg>
         Uso de imágenes
+      </a>
+
+      <a href="proceso.html">
+        <svg width="18" height="18" viewBox="0 0 24 24"><path d="M12 2v6"/><path d="M12 16v6"/><path d="M4.9 7.5l4.24 4.24"/><path d="M19.1 16.5l-4.24-4.24"/></svg>
+        Proceso de maquetación
       </a>
     </nav>
 
     <div class="actions">
-      <a class="btn mail" href="mailto:tucorreo@example.com">
-        ✉️ Enviar correo
-      </a>
-      <a class="btn ghost" href="index.html">
-        ⬅ Volver al inicio
-      </a>
+      <a class="btn mail" href="mailto:jose.davila@institutoalejandria.edu.mx">✉️ Enviar correo</a>
+      <a class="btn ghost" href="#top">⤴ Volver al inicio</a>
     </div>
-
   </aside>
 
+  <!-- MAIN -->
   <main>
-    <section class="header">
+
+    <header class="header">
       <div class="hero">
-        <h2 class="title">Retícula</h2>
-        <p class="subtitle">Estructuras que ordenan la página.</p>
+        <div>
+          <h1 class="title">Retícula</h1>
+          <p class="subtitle">Estructura invisible que organiza la página.</p>
+        </div>
       </div>
+    </header>
+
+    <section class="container">
+
+      <h2>¿Qué es una retícula?</h2>
+      <p>La retícula es la estructura base del diseño editorial. Ordena, jerarquiza y da coherencia visual al conjunto de páginas.</p>
+
+      <h2>Columnas y márgenes</h2>
+      <p>Una retícula puede tener desde dos hasta doce columnas, dependiendo del tipo de publicación. Los márgenes funcionan como “zonas de respiración”.</p>
+
+      <h2>Modulación</h2>
+      <p>Las retículas modulares permiten dividir la página en unidades proporcionales que soportan una mayor complejidad visual.</p>
+
+      <h2>Retícula editorial clásica</h2>
+      <p>Basada en la proporción áurea, construye relaciones armoniosas entre caja tipográfica, márgenes y columnas.</p>
+
+      <h2>Aplicación</h2>
+      <p>Una buena retícula permite variación con coherencia. No limita: proporciona una base flexible que mantiene el orden incluso en diseños dinámicos.</p>
+
     </section>
 
-    <div class="container">
-      <h1>Retícula</h1>
-      <p>Contenido de la sección retícula.</p>
-    </div>
-
     <footer>
-      Diseño Editorial © 2025
+      © 2025 · Diseño Editorial — Curso
     </footer>
+
   </main>
 
 </div>
+
 </body>
 </html>
