--- a/color.html
+++ b/color.html
@@ -41,9 +41,16 @@
       display:flex;gap:10px;align-items:center;padding:10px 8px;border-radius:8px;
       color:var(--muted);text-decoration:none;font-weight:600;margin-bottom:6px
     }
-    nav.primary a svg{flex-shrink:0}
+    nav.primary a svg{
+      flex-shrink:0;
+      stroke:currentColor;
+      fill:none;
+    }
+
     nav.primary a:hover,
-    nav.primary a[aria-current="page"]{color:var(--white)}
+    nav.primary a[aria-current="page"]{
+      color:var(--white);
+    }
 
     .sidebar .actions{margin-top:40px;display:flex;flex-direction:column;gap:10px}
     .btn{display:inline-flex;align-items:center;gap:10px;padding:10px 14px;border-radius:10px;text-decoration:none;font-weight:700}
@@ -97,40 +104,65 @@
     </div>
 
     <nav class="primary">
+
       <a href="formato.html">
-        <svg width="18" height="18" viewBox="0 0 24 24"><rect x="3" y="4" width="18" height="16" rx="2" stroke="currentColor"/></svg>
+        <svg width="18" height="18" viewBox="0 0 24 24">
+          <rect x="3" y="4" width="18" height="16" rx="2"/>
+        </svg>
         Formato
       </a>
 
       <a href="tipografia.html">
-        <svg width="18" height="18" viewBox="0 0 24 24"><path d="M4 20h16"/><path d="M12 4l-4 12"/><path d="M12 4l4 12"/></svg>
+        <svg width="18" height="18" viewBox="0 0 24 24">
+          <path d="M4 20h16"/>
+          <path d="M12 4l-4 12"/>
+          <path d="M12 4l4 12"/>
+        </svg>
         Tipografía
       </a>
 
       <a href="reticula.html">
-        <svg width="18" height="18" viewBox="0 0 24 24"><path d="M3 9h18M3 15h18"/></svg>
+        <svg width="18" height="18" viewBox="0 0 24 24">
+          <path d="M3 9h18"/>
+          <path d="M3 15h18"/>
+          <rect x="3" y="4" width="18" height="16" rx="2"/>
+        </svg>
         Retícula
       </a>
 
       <a href="color.html" aria-current="page">
-        <svg width="18" height="18" viewBox="0 0 24 24"><circle cx="12" cy="12" r="7" stroke="currentColor"/></svg>
+        <svg width="18" height="18" viewBox="0 0 24 24">
+          <circle cx="12" cy="12" r="7"/>
+        </svg>
         Color
       </a>
 
       <a href="cubierta.html">
-        <svg width="18" height="18" viewBox="0 0 24 24"><rect x="3" y="4" width="14" height="16"/><path d="M17 6h3v12h-3"/></svg>
+        <svg width="18" height="18" viewBox="0 0 24 24">
+          <rect x="3" y="4" width="14" height="16"/>
+          <path d="M17 6h3v12h-3"/>
+        </svg>
         Cubierta / Portada
       </a>
 
       <a href="imagenes.html">
-        <svg width="18" height="18" viewBox="0 0 24 24"><rect x="3" y="4" width="18" height="14"/><path d="M8 11l2 2 3-3 4 4"/></svg>
+        <svg width="18" height="18" viewBox="0 0 24 24">
+          <rect x="3" y="4" width="18" height="14"/>
+          <path d="M8 11l2 2 3-3 4 4"/>
+        </svg>
         Uso de imágenes
       </a>
 
       <a href="proceso.html">
-        <svg width="18" height="18" viewBox="0 0 24 24"><path d="M12 2v6"/><path d="M12 16v6"/><path d="M4.9 7.5l4.24 4.24"/><path d="M19.1 16.5l-4.24-4.24"/></svg>
+        <svg width="18" height="18" viewBox="0 0 24 24">
+          <path d="M12 2v6"/>
+          <path d="M12 16v6"/>
+          <path d="M4.9 7.5l4.24 4.24"/>
+          <path d="M19.1 16.5l-4.24-4.24"/>
+        </svg>
         Proceso de maquetación
       </a>
+
     </nav>
 
     <div class="actions">
